@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/libstdc++-v3
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Feb 2010; Peter Hjalmarsson <xake@gentoo.org>
+  -libstdc++-v3-3.3.6.ebuild:
+  In portage
 
 *libstdc++-v3-4.4.2 (18 Oct 2009)
 
